--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2625,10 +2625,6 @@
 			margin: 0 auto;
 		}
 
-			.wrapper > .inner {
-				background-color: #ed4933;
-			}
-
 			@media screen and (max-width: 1280px) {
 
 				.wrapper > .inner {
@@ -2643,6 +2639,10 @@
 					width: 100%;
 				}
 
+			}
+
+			.wrapper >.inner p.orange {
+				background-color: #ed4933;
 			}
 
 		.wrapper.alt {
