--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,11 +28,9 @@
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		background-color: transparent;
-		border-radius: 3px;
 		border: 0;
-		box-shadow: inset 0 0 0 2px #fff;
+		box-shadow: none !important;
 		color: #fff;
-		cursor: pointer;
 		display: inline-block;
 		font-size: 0.8em;
 		font-weight: 600;
