--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -27,7 +27,6 @@
 		-webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
-		background-color: transparent;
 		border: 0;
 		box-shadow: none !important;
 		color: #fff;
@@ -44,7 +43,7 @@
 		white-space: nowrap;
 		overflow: hidden;
 		text-overflow: ellipsis;
-		background-color: #ed4933;
+		background-color: #21b2a6;
 	}
 
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
