--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -28,6 +28,7 @@
 		-ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
 		border: 0;
+		border-radius: 3px;
 		box-shadow: none !important;
 		color: #fff;
 		display: inline-block;
